syntax = "proto3";

package proto;

message Item {
    int32 ID =1;
    string Garment =2;
}

message ItemList {
    repeated Item List = 1;
}

service AddService {
    rpc AddGarment(Item) returns (ItemList);
}