syntax = "proto3";

package proto;

message Item {
    int32 ID =1;
    string Garment =2;
}

message ItemList {
    repeated Item List = 1;
}

message ClearRequest {

}


message ClearResponse {

}

message GetAllRequest {

}

service GarmentService {
    rpc AddGarment(Item) returns (ItemList);
    rpc ClearList(ClearRequest) returns (ClearResponse);
    rpc AllGarments(GetAllRequest) returns (ItemList);

}